--- a/Proyecto01/templates/sales/detail_sale.html
+++ b/Proyecto01/templates/sales/detail_sale.html
@@ -17,7 +17,7 @@
             {% if sale_image.url != '' %}
                 <img src="{{ sale_image.url }}" width="350" height="350">
             {% else %}
-                <img src="#" width="350" height="350">
+                <img src="/media/rentals_image/noimg.jpg" width="350" height="350">
             {% endif %}
                 
             </div>
