--- a/Proyecto01/templates/base.html
+++ b/Proyecto01/templates/base.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="/">Inicio</a>
                     </li>
                     {% block sales %} {% endblock %}
-                        <a class="nav-link" href="/sales/list-sale/">Ventas</a>
+                        <a class="nav-link" href="/sales/list-sale/">Propiedades</a>
                     </li>
                     {% block rentals %} {% endblock %}
                         <a class="nav-link" href="/rentals/list-rental/">Alquileres</a>
