--- a/Proyecto01/templates/base.html
+++ b/Proyecto01/templates/base.html
@@ -47,7 +47,7 @@
                             {% endblock %}
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">Administración</a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="/sales/crud-sale/">CRUD Ventas</a>
+                                    <a class="dropdown-item" href="/sales/crud-sale/">CRUD Propiedades</a>
                                     <a class="dropdown-item" href="/rentals/crud-rental/">CRUD Alquileres</a>
                                     <a class="dropdown-item" href="/data/crud-index/">CRUD Index</a>
                                     <div class="dropdown-divider"></div>
