--- a/Proyecto01/templates/index.html
+++ b/Proyecto01/templates/index.html
@@ -70,7 +70,7 @@
                         <h1 class="text-center mt-3">{{ dat.title3 }}</h1>
                         {% else %}
                         {% endif %}
-                        {% if dat.title3 != None %}
+                        {% if dat.description3 != None %}
                         <p class="font-weight-bold text-left">{{ dat.description3 }}</p>
                         {% else %}
                         {% endif %}
