--- a/Proyecto01/templates/index.html
+++ b/Proyecto01/templates/index.html
@@ -58,7 +58,7 @@
                 <div class="row mt-5">
                     <div class="col-lg-6">
                         <div class="rounded-circle text-center">
-                            {% if dat.img3 != None %}
+                            {% if dat.img3 != '' %}
                             <img class="rounded-circle mb-3" src="{{ dat.img3.url }}" style="width: 13rem;">
                             {% else %}
                             <p></p>
